--- a/localisation/KR_Ministers_l_english.yml
+++ b/localisation/KR_Ministers_l_english.yml
@@ -15637,7 +15637,7 @@
 	 Georgios_Streit_dead:0 " is incapable of holding this post."
 	 GRE_Georgios_Logothetis_int_ade:0 "Georgios Logothetis"
 	 Georgios_Logothetis_dead:0 " is incapable of holding this post."
-	 GRE_Napoleon_Zervas_int_ade:0 "Napoleon Zervas"
+	 GRE_Napoleon_Zervas_int_ade:0 "Napoléon Zervas"
 	 Napoleon_Zervas_dead:0 " is incapable of holding this post."
 	 GRE_Alchibiades_Stephanopoulos_int_pau:0 "Alchibiades Stephanopoulos"
 	 Alchibiades_Stephanopoulos_dead:0 " is incapable of holding this post."
