--- a/localisation/KR_Nationalist_France_l_english.yml
+++ b/localisation/KR_Nationalist_France_l_english.yml
@@ -252,22 +252,22 @@ NFA_establish_maquisards_tooltip:0 "You will encourage resistance in the south o
 NFA_nuclear_effort:0 "Nuclear Effort"
 NFA_nuclear_effort_desc:0 "Initial tests in nuclear science has shown promising results. Harnessing its power can give us a weapon unlike anything mankind has seen."
 NFA_effort_national:0 "Effort National"
-NFA_effort_national_desc:0 "The Libération of France has seen many factories destroyed in the fight and many of the previous workers killed. Furthermore our little army is now completely unadapted to this new territory and we dropped behind the other powers of the continent in terms of military preparation. We need to expand our army and unite the Frenchmen around the great cause of rebuilding our country so that France may never fall again."
+NFA_effort_national_desc:0 "The Libération of France has seen many factories destroyed in the fight and many of the previous workers killed. Furthermore our little army is now completely alien to this new territory and we dropped behind the other powers of the continent in terms of military preparation. We need to expand our army and unite the Frenchmen around the great cause of rebuilding our country so that France may never fall again."
 NFA_amnistia:0 "Scientists Amnistia"
 NFA_amnistia_desc:0 "We have to admit that the Communards sponsored innovation in many fields. It would be wise to grant amnistia to important searchers so that they begin to work for us and for the New France!"
 
 ### Events ###
 nfa.1.t:0 "The situation of National France in 1936"
-nfa.1.d:0 "The Third Republic ended in the way it began: defeated by German arms, and facing Communist Revolution at home. In the aftermath of the French Communal Revolution, the whole apparatus of state and French military, sheltered in Marseille, quickly embarked with the French Navy to Algiers, fleeing the newly created Commune of France. After the peace negotiations with Germany, the French refugee politicians decided to start from scratch again, proclaiming the French Fourth Republic, in exile in Africa but claiming the French motherland. Soon, it was obvious that the parliamentarian regime was outdated, as the exiled leading politicians were mainly nationalists and authoritarian : the military subsequently seized the executive powers, under the leadership of popular marshal Ferdinand Foch. After his death in 1929, the victor of Verdun, Philippe Pétain, took his place, helped by his protégé, admiral François Darlan. Although the military regime of the French Republic in exile, still allied with the British monarchy in exile, has coalesced and stabilized, it still faces numerous threats. Will National France be ready to retake the fatherland in spite of the increasing troubles with the native populations, tired of French authority, or with the Young Guard represented by colonel Charles de Gaulle?"
+nfa.1.d:0 "The Third Republic ended in the way it began: defeated by German arms, and facing Communist Revolution at home. In the aftermath of the French Communal Revolution, the whole apparatus of state and French military, sheltered in Marseille, quickly embarked with the French Navy to Algiers, fleeing the newly created Commune of France. After the peace negotiations with Germany, the French refugee politicians decided to start from scratch again, proclaiming the French Fourth Republic, in exile in Africa but claiming the French motherland. Soon, it was obvious that the parliamentarian regime was outdated, as the exiled leading politicians were mainly nationalists and authoritarian : the military subsequently seized the executive powers, under the leadership of popular marshal Ferdinand Foch. After his death in 1929, the victor of Verdun, Philippe Pétain, took his place, helped by his protégé, admiral François Darlan. Although the military regime of the French Republic in exile, still allied with the British monarchy in exile, has coalesced and stabilised, it still faces numerous threats. Will National France be ready to retake the fatherland in spite of the increasing troubles with the native populations, tired of French authority, or with the Young Guard represented by colonel Charles de Gaulle?"
 nfa.1.a:0 "Ce n'est qu'un léger contretemps..."
 nfa.2.t:0 "The Republican restoration"
-nfa.2.d:0 "Today President Pétain announced from the balcony of the presidential palace in Algiers the restoration of the suspended constitution of the 4th Republic, the declaration was followed by a popular jubilation in the european districts of Algiers, Oran or Tunis. Vive la République!"
+nfa.2.d:0 "Today President Pétain announced from the balcony of the presidential palace in Algiers the restoration of the suspended constitution of the 4th Republic, the declaration was followed by a popular jubilation in the European districts of Algiers, Oran or Tunis. Vive la République!"
 nfa.2.a:0 "Vive la République!"
 nfa.3.t:0 "The Bourbon restoration"
-nfa.3.d:0 "Today Jean d'Orléans has been crowned king of France during an ornate ceremony in the Notre Dame d'Afrique. During the ceremony President of Republic handed the crown to the cardinal that crowned the him, symbolizing the transfer of power from the President to the new king. Vive le Roi!"
+nfa.3.d:0 "Today Jean d'Orléans has been crowned king of France during an ornate ceremony in the Notre Dame d'Afrique. During the ceremony President of Republic handed the crown to the cardinal that crowned the him, symbolising the transfer of power from the President to the new king. Vive le Roi!"
 nfa.3.a:0 "Vive le Roi!"
 nfa.4.t:0 "The Imperial restoration"
-nfa.4.d:0 "Today Louis Napoleon VI has been crowned Emperor of France during an ornate ceremony in the Notre Dame d'Afrique. During the ceremony President of Republic handed the crown to the cardinal that crowned him, symbolizing the transfer of power from the President to the new Emperor. Vive l'empereur!"
+nfa.4.d:0 "Today Louis Napoléon VI has been crowned Emperor of France during an ornate ceremony in the Notre Dame d'Afrique. During the ceremony President of Republic handed the crown to the cardinal that crowned him, symbolising the transfer of power from the President to the new Emperor. Vive l'empereur!"
 nfa.4.a:0 "Vive l'Empereur!"
 nfa.5.t:0 "Appointing a Prime Minister"
 nfa.5.d:0 "With general Janin being compromised by his previous political blunders, time has come to choose new prime minister in order to appease dissenters..."
@@ -276,7 +276,7 @@ nfa.5.b:0 "Appoint General De Gaulle"
 nfa.5.c:0 "Appoint Reynaud, the Republican"
 nfa.5.e:0 "The dissenters be damned! Keep General Janin!"
 nfa.6.t:0 "Republican-Socialist Party wants to participate on elections"
-nfa.6.d:0 "After restoration of suspended constitution the Remnants of once powerfull Republican-Socialist Party have reorganized and expressed intention of participating in next elections. Many are demanding to ban such party as their kind brought misery upon France while others are concerned about implications of such ban. Should we outlaw the Republican-Socialist Party or allow them to exist?"
+nfa.6.d:0 "After restoration of suspended constitution the Remnants of once powerful Republican-Socialist Party have reorganised and expressed intention of participating in next elections. Many are demanding to ban such party as their kind brought misery upon France while others are concerned about implications of such ban. Should we outlaw the Republican-Socialist Party or allow them to exist?"
 nfa.6.a:0 "Only if they dissociate from Syndicalism!"
 nfa.6.b:0 "Never!"
 nfa.7.t:0 "Appointing a Prime Minister"
@@ -482,13 +482,13 @@ nfa.72.d:0 "The Caribbean Federation has decided to keep our former Caribbean co
 nfa.72.a:0 "Let the matter drop"
 nfa.72.b:0 "We shall not forget this..."
 nfa.73.t:0 "French invasion of Morocco"
-nfa.73.d:0 "The jackals of the French Government-in-Exile based in Algiers have sensed our weakness and decided to seize our colony of Morocco! There's not much that we can do... Some of our generals, however, believe that we should put up some resistance, even if just a token effort. A few nationalist fieldmarshalls are more extreme: if we are to still be respected as a great power, we must warn the French to move back or face our forces!"
+nfa.73.d:0 "The jackals of the French Government-in-Exile based in Algiers have sensed our weakness and decided to seize our colony of Morocco! There's not much that we can do... Some of our generals, however, believe that we should put up some resistance, even if just a token effort. A few nationalist field marshals are more extreme: if we are to still be respected as a great power, we must warn the French to move back or face our forces!"
 nfa.73.a:0 "There's nothing that we can do, surrender the colony"
 nfa.73.b:0 "Offer what resistance we can..."
 nfa.73.c:0 "We may be weak, but we'll bow to no French - Resist any incursion"
 nfa.74.t:0 "Morocco is ours!"
 nfa.74.d:0 "The falling German Empire has bowed to our demands and ceded the colony of Morocco to us. However, some rogue units refused to follow the orders of the Kaiser himself and are ready to resist the new French administration."
-nfa.74.a:0 "Hm, that's weird"
+nfa.74.a:0 "Hmm, that's weird"
 nfa.75.t:0 "Morocco is ours!"
 nfa.75.d:0 "The falling German Empire has bowed to our demands and ceded the colony of Morocco to us."
 nfa.75.a:0 "Great!"
