--- a/localisation/KR_Netherlands_l_english.yml
+++ b/localisation/KR_Netherlands_l_english.yml
@@ -97,7 +97,7 @@ HOL_land_doctrine_desc:0 "While we have not participated a grand war in Europe s
 HOL_infantry_focus:0 "The Basic Needs"
 HOL_infantry_focus_desc:0 "A crucial focus for any army is equipping their soldiers, and we are no exception. Updating our small arms may be expensive, but we cannot allow ourselves to fall behind in this crucial area."
 HOL_artillery_focus:0 "Artillery Effort"
-HOL_artillery_focus_desc:0 "If the Weltkrieg proved anything, it’s that Napoleon was right - God is with those with the best artillery. We should endeavour to be this side."
+HOL_artillery_focus_desc:0 "If the Weltkrieg proved anything, it's that Napoleon was right - God is with those with the best artillery. We should endeavour to be this side."
 HOL_legionary_motorization:0 "Gemotoriseerde Infanterie"
 HOL_legionary_motorization_desc:0 "A major problem in the Weltkrieg identified by our generals was the general slow speed of infantry in exploiting a breakthrough. Using trucks as transport should help immensely with this."
 HOL_mech_infantry:0 "Gemechaniseerde Infanterie"
