--- a/localisation/ideas_l_english.yml
+++ b/localisation/ideas_l_english.yml
@@ -1132,7 +1132,7 @@ GRE_alexandros_sakellariou:0 "Alexandros Sakellariou"
 GRE_konstantinos_ventiris:0 "Konstantinos Ventiris"
 GRE_alexander_papagos:0 "Alexander Papagos"
 GRE_aris_velouchiotis:0 "Aris Velouchiotis"
-GRE_napoleon_zervas:0 "Napoleon Zervas"
+GRE_napoleon_zervas:0 "Napoléon Zervas"
 GRE_panagiotis_gazis:0 "Panagiotis Gazis"
 GRE_vasilios_tsarpalis:0 "Vasilios Tsarpalis"
 GRE_nikolaos_plastiras:0 "Nikolaos Plastiras"
