--- a/localisation/KR_Ottoman_l_english.yml
+++ b/localisation/KR_Ottoman_l_english.yml
@@ -103,7 +103,7 @@ OTT_enforce_autocracy_desc:0 ""
 OTT_support_parliament:0 "Support the Parliament"
 OTT_support_parliament_desc:0 ""
 OTT_write_constitution:0 "Write New Constitution"
-OTT_write_constitution_desc:0 ""
+OTT_write_constitution_desc:0 "Ottoman Constitution of 1876, translated directly from the French Constitution and announced under foreign pressure, is the product of a bygone era. Let us write it anew to face the challenges of this century!"
 OTT_enforce_rule_of_law:0 "Enforce the Rule of Law"
 OTT_enforce_rule_of_law_desc:0 ""
 OTT_fight_corruption:0 "Fight Corruption"
@@ -674,49 +674,54 @@ ott.94.t:0 "Protests calm down"
 ott.94.d:0 "Following several weeks of anarchy and rioting on the streets of Kostantiniyye, the protests eventually died down. While damage to public buildings and services were minimal, damage to the credibility of the protesters was immense. The conservative Ottoman public, always wary of chaos and instability, had chosen to side with the Sultan. As a new era dawned on The Ottoman Empire, Sultan [Root.GetLeader] stood strong with the support of the majority behind him."
 ott.94.a:0 "We will have order in our Empire!"
 
-ott.95.t:0 ""
-ott.95.d:0 ""
-ott.95.a:0 ""
+ott.95.t:0 "Sublime Committee for Constitution"
+ott.95.d:0 "Our illustrious Sultan [Root.GetLeader] announced today his welcoming support for a new Constitution that would seek to address the issues of a new century. Under his benevolent guidance, a Sublime Committee for Constitution is to be formed of law experts and members of major political parties."
+ott.95.a:0 "Long live the Empire!"
 
-ott.96.t:0 ""
-ott.96.d:0 ""
-ott.96.a:0 ""
+ott.96.t:0 "Ottoman Constitution - The Ottoman State"
+ott.96.d:0 "The Sublime Committee for Constitution has been working tirelessly to write our new Constitution. The Parliament has started the process of approving the independent Articles and submitting them for ratification by His Majesty the Sultan.\n\nArticle 1. The Ottoman Empire comprises present territory and possessions, and semi-dependent provinces. It forms an indivisible whole, from which no portion can be detached under any pretext whatever.\nArticle 2. Kostantiniyye is the capital of the Ottoman Empire.\nArticle 3. Islam is the state religion. The state will protect the free exercise of faiths professed in the Empire, and uphold the religious privileges granted to various bodies.\nArticle 4. Turkish is the official language, and required to hold public office."
+ott.96.a:0 "Approved"
 
-ott.97.t:0 ""
-ott.97.d:0 ""
-ott.97.a:0 ""
+ott.97.t:0 "Ottoman Constitution - The Sultan"
+ott.97.d:0 "Article 5. The Ottoman sovereignty, which holds the title of the Supreme Caliph of Islam, belongs to the eldest prince of the House of Osman, in accordance with the rules established ab antiquo.\nArticle 6. His Majesty the Sultan, in his role as Supreme Caliph, is protector of the Muslim religion. He is the sovereign and padişah of all Ottomans.\nArticle 7. His Majesty the Sultan is irresponsible, his person is sacred.\nArticle 8. The liberties, properties real and personal, and the civil list of the members of the Ottoman Dynasty are under the guarantee of all."
+ott.97.a:0 "By God, approved!"
 
-ott.98.t:0 ""
-ott.98.d:0 ""
-ott.98.a:0 ""
+ott.98.t:0 "Ottoman Constitution - Sovereign Rights of the Sultan"
+ott.98.d:0 "Article 9. Among the sovereign rights of His Majesty the Sultan are the following prerogatives: he makes and cancels the appointments of ministers; he confers the grades, functions and insignia of his orders, and confers investiture on the governors of provinces, according to forms determined by the privileges granted them; he has the coining of money; his name is read at the Friday Sermons; he concludes treaties with the powers; he declares war and makes peace; he commands the land and sea forces; he directs military movements; he carries out the provisions of the Sacred Law, and of the other laws; he sees to the administration of public measures; he respites or commutes sentences pronounced by the criminal courts."
+ott.98.a:0 "Approved"
 
-ott.99.t:0 ""
-ott.99.d:0 ""
-ott.99.a:0 ""
+ott.99.t:0 "Ottoman Constitution - Basic Human Rights"
+ott.99.d:0 "Article 10. All subjects of the empire are called Ottomans, without distinction whatever faith they profess.\nArticle 11. Every Ottoman enjoys personal liberty on condition of not interfering with the liberty of others.\nArticle 12. Personal liberty is wholly inviolable. No one can suffer punishment, under any pretext whatsoever, except in cases determined by law, and according to the forms prescribed by it.\nArticle 13. All Ottomans are equal in the eyes of the law. They have the same rights, and owe the same duties towards their country, without prejudice to religion.\nArticle 14. All Ottomans are admitted to public offices, according to their fitness, merit, and ability."
+ott.99.a:0 "Approved"
 
-ott.100.t:0 ""
-ott.100.d:0 ""
-ott.100.a:0 ""
+ott.100.t:0 "Ottoman Constitution - Houses of Parliament"
+ott.100.d:0 "In the Constitution of 1876, the Houses of Parliament were established comprising of a Lower House (Meclis-i Mebusan) and an Upper House (Meclis-i Âyan). The Grand Vizier, handpicked by the Sultan, presided over the Houses of Parliament. The liberal members of the Committee are arguing that the Grand Vizier (and by extension, rest of the government) should be decided by votes, and not by an Imperial Decision of the Monarch."
+ott.100.a:0 "Sultan will appoint the Grand Vizier"
+ott.100.b:0 "The Government shall be formed by the Parliament"
 
-ott.101.t:0 ""
-ott.101.d:0 ""
-ott.101.a:0 ""
+ott.101.t:0 "Ottoman Constitution - Parliament schedule"
+ott.101.d:0 "In the old constitution, Sultan had the rights to open, prorogue, and dissolve the parliament. As there had been a notorious occasion when Sultan Abdülhamid II abused his powers to prorogue the Parliament and not call another session for 30 years, many liberal members of the Sublime Committee are wary of allowing such powers again. What shall be the decision?"
+ott.101.a:0 "Sultan opens and dissolves the parliament"
+ott.101.b:0 "Parliament schedule is set by the Constitution"
 
-ott.102.t:0 ""
-ott.102.d:0 ""
-ott.102.a:0 ""
+ott.102.t:0 "Ottoman Constitution - Veto rights"
+ott.102.d:0 "Another contentious issue was the veto rights of the Sultan. Monarchist and conservative members of the Committee insisted that Sultan, whom represents the collective will of the Ottoman Public, should have unchallenged veto powers, while liberal MP's pushed for the supremacy of the Parliament."
+ott.102.a:0 "Sultan gets the last word."
+ott.102.b:0 "A veto can be overturned by two-thirds majority"
 
-ott.103.t:0 ""
-ott.103.d:0 ""
-ott.103.a:0 ""
+ott.103.t:0 "Ottoman Constitution - Right to Petition"
+ott.103.d:0 "Article 63 of the Constitution states that 'One or more persons of Ottoman nationality have the right of presenting petitions in the proper quarter relating to the breaking of law and regulation, and may likewise present in protest signed petitions to the General Ottoman Assembly, complaining of the conduct of state servants and functionaries.' \n\nWhile this article by itself seems sufficiently just, several members of the Sublime Committee suggested that minorities should be explicitly allowed to present petitions in local languages, as not stating this would allow a loophole where local governments could arbitrarily decide not to process petitions written in languages other than Turkish."
+ott.103.a:0 "Allow petitions written in local languages"
+ott.103.b:0 "If they want to complain, they should learn Turkish"
 
-ott.104.t:0 ""
-ott.104.d:0 ""
-ott.104.a:0 ""
+ott.104.t:0 "Ottoman Constitution - Rights of Trade Unions"
+ott.104.d:0 "The issue of the rights of the trade unions and syndicates was a dreaded one, as both liberals and conseratives were wary of syndicalist factions gaining excessive powers. After careful deliberation, three Articles were composed, aiming to give sufficient rights to workers and limit syndicalist influence."
+ott.104.a:0 "Allow all trade unions, strikes and lockouts"
+ott.104.b:0 "Such godless syndicalism has no place in the Ottoman Empire!"
 
-ott.105.t:0 ""
-ott.105.d:0 ""
-ott.105.a:0 ""
+ott.105.t:0 "The new constitution is declared!"
+ott.105.d:0 "The new Ottoman Constitution was declared in the front garden of ancient Topkapı Palace today, with an accompanying ceremony and military parade. May our new 'Kanun-u Esasi' be auspicious!"
+ott.105.a:0 "Long live the Sultan!"
 
 ott.106.t:0 "Independence of the Judiciary"
 ott.106.d:0 "Our chief legal experts argue that in the decision-making process, judges should have freedom to decide cases impartially, in accordance with their interpretation of the law and the facts; that they should be able to act without any restriction or improper influence. They claim that one of the most important standards underpinning the autonomy of the judiciary is irremovability, that is, for ordinary judges to be appointed permanently until retirement. Shall we give such guarantees of independence to our judges?"
@@ -1030,7 +1035,7 @@ ott.174.d:0 "In course of the ongoing operations against syndicalist interferenc
 ott.174.a:0 "Why would such groups infiltrate our military?"
 
 ott.175.t:0 "Druze revolt dispersed in Syria"
-ott.175.d:0 "A large revolt of Druze tribesmen was recently crushed by our Gendarmerie. Hundreds of rebels have been killed, while the routed tribes returned to their villages and ceased their raids on our trade routes. Evidence shows that these revolts are being provoked by Hashemite agents."
+ott.175.d:0 "A large revolt of Druze tribesmen was recently crushed by our Desert Rangers. Hundreds of rebels have been killed, while the routed tribes returned to their villages and ceased their raids on our trade routes. Evidence shows that these revolts are being provoked by Hashemite agents."
 ott.175.a:0 "Such pointless waste..."
 
 ott.176.t:0 "Egyptian Weapon shipments caught in Basra"
