Silly French counting

--- a/localisation/KR_Nationalist_France_l_english.yml
+++ b/localisation/KR_Nationalist_France_l_english.yml
@@ -153,7 +153,7 @@ NFA_monarchy_desc:0 "It is a known fact that France has suffered extensively und
 NFA_monarchy_tooltip:0 "§RYou will restore a Monarchy in National France headed by the house of d'Orléans.§! \n"
 NFA_empire:0 "Restore the French Empire"
 NFA_empire_desc:0 "Kings and democratically elected governments have both failed France. During the reign of Napoleon Europe was dominated by the proud French people, although even if he is installed we need to determine whether power should lie with the Emperor or with the parliament. Either way, Vive l'Empereur!"
-NFA_empire_tooltip:0 "§RYou will restore an Empire in National France headed by Napoléon VI.§! \n"
+NFA_empire_tooltip:0 "§RYou will restore an Empire in National France headed by Napoléon IV.§! \n"
 NFA_Petain_president:0 "Continuation of the Petain Presidency"
 NFA_Petain_president_desc:0 "The announcement of the democratisation of the regime has struck many people by surprise. Although Maréchal Pétain is at the origin of the reform, he is normally forced to abdicate his role of President. Then again he could easily retain his position by simply pulling a few strings..."
 NFA_petain_pres_tooltip:0 "§RPétain will stay president until his potential resignation or death.§! \n"
@@ -267,7 +267,7 @@ nfa.3.t:0 "The Bourbon restoration"
 nfa.3.d:0 "Today Jean d'Orléans has been crowned king of France during an ornate ceremony in the Notre Dame d'Afrique. During the ceremony President of Republic handed the crown to the cardinal that crowned the him, symbolising the transfer of power from the President to the new king. Vive le Roi!"
 nfa.3.a:0 "Vive le Roi!"
 nfa.4.t:0 "The Imperial restoration"
-nfa.4.d:0 "Today Louis Napoléon VI has been crowned Emperor of France during an ornate ceremony in the Notre Dame d'Afrique. During the ceremony President of Republic handed the crown to the cardinal that crowned him, symbolising the transfer of power from the President to the new Emperor. Vive l'empereur!"
+nfa.4.d:0 "Today Louis Napoléon IV has been crowned Emperor of France during an ornate ceremony in the Notre Dame d'Afrique. During the ceremony President of Republic handed the crown to the cardinal that crowned him, symbolising the transfer of power from the President to the new Emperor. Vive l'empereur!"
 nfa.4.a:0 "Vive l'Empereur!"
 nfa.5.t:0 "Appointing a Prime Minister"
 nfa.5.d:0 "With general Janin being compromised by his previous political blunders, time has come to choose new prime minister in order to appease dissenters..."
