--- a/localisation/KR_Ottoman_l_english.yml
+++ b/localisation/KR_Ottoman_l_english.yml
@@ -715,11 +715,11 @@ ott.103.a:0 "Allow petitions written in local languages"
 ott.103.b:0 "If they want to complain, they should learn Turkish"
 
 ott.104.t:0 "Ottoman Constitution - Rights of Trade Unions"
-ott.104.d:0 "The issue of the rights of the trade unions and syndicates was a dreaded one, as both liberals and conseratives were wary of syndicalist factions gaining excessive powers. After careful deliberation, three Articles were composed, aiming to give sufficient rights to workers and limit syndicalist influence."
+ott.104.d:0 "The issue of the rights of the trade unions and syndicates was a dreaded one, as both liberals and conseratives were wary of syndicalist factions gaining excessive powers. Three articles were composed after careful deliberation, aiming to give sufficient rights to the workers and limit syndicalist influence."
 ott.104.a:0 "Allow all trade unions, strikes and lockouts"
 ott.104.b:0 "Such godless syndicalism has no place in the Ottoman Empire!"
 
-ott.105.t:0 "The new constitution is declared!"
+ott.105.t:0 "The New Constitution is declared!"
 ott.105.d:0 "The new Ottoman Constitution was declared in the front garden of ancient Topkapı Palace today, with an accompanying ceremony and military parade. May our new 'Kanun-u Esasi' be auspicious!"
 ott.105.a:0 "Long live the Sultan!"
 
@@ -743,11 +743,11 @@ ott.109.d:0 "In former days, local administrators and military governors could f
 ott.109.a:0 "Who dares interrupt justice?"
 
 ott.110.t:0 "Ineffective Administration"
-ott.110.d:0 "It has been several months since we formally adopted the metric system and the Standard Ottoman script, but we are still receiving troubling reports of incompetent bureaucrats being completely unable to use the new standards of measurement, and dozens of nearly-illiterate government officials have been discovered after they have proved incapable of deciphering the new form of official writing. It appears that the full implementation of these reforms will take more time than anticipated."
+ott.110.d:0 "It has been several months since we formally adopted the metric system and the Standard Ottoman script, but we are still receiving troubling reports of incompetent bureaucrats being completely unable to use the new standards of measurement, while dozens of nearly-illiterate government officials have been discovered after they have proved incapable of deciphering the new form of official writing. It appears that the full implementation of these reforms will take more time than anticipated."
 ott.110.a:0 "Who hired all these useless officials?!"
 
 ott.111.t:0 "Corrupt Bureaucracy"
-ott.111.d:0 "The notoriously widespread corruption in the Ottoman bureaucracy is a long-established phenomenon. Over the centuries, low wages and even lower moral standards of Ottoman government officials resulted in the gradual acceptance and normalisation of bribery as a means of income. Legitimised under terms such as 'hediye' and 'caize', corruption became so commonplace that several Ottoman sultans were recorded to have accepted bribes. Many efforts to curtail corruption were made over the centuries, none of them successful. Unfortunately, it appears that our coordinated efforts to end bribery are about to meet the same fate. The reforms we instituted, which include new laws and severe penalties, are being casually disregarded by the old-headed bureaucrats, almost all of whom are feeling quite secure in their entrenched positions in the government. Several reports we have received indicate that any action taken against these corrupt officials are quickly covered-up by complicit superiors and high officials. It appears that eliminating corruption will not be an easy task."
+ott.111.d:0 "The notoriously widespread corruption in the Ottoman bureaucracy is a long-established phenomenon. Over the centuries, low wages and even lower moral standards of Ottoman government officials resulted in the gradual acceptance and normalisation of bribery as a means of income. Legitimised under terms such as 'hediye' and 'caize', corruption became so commonplace that several Ottoman sultans were recorded to have accepted bribes. Many efforts to curtail corruption were made over the centuries, none of them successful. Unfortunately, it seems that our coordinated efforts to end bribery are about to meet the same fate. The reforms we instituted, which include new laws and severe penalties, are being casually disregarded by the old-headed bureaucrats, almost all of whom are feeling quite secure in their entrenched positions in the government. Several reports we have received indicate that any action taken against these corrupt officials are quickly covered-up by complicit superiors and high officials. It appears that eliminating corruption will not be an easy task."
 ott.111.a:0 "Reinstitute the anti-bribery oath!"
 
 ott.112.t:0 "Report on Corruption"
@@ -891,7 +891,7 @@ ott.144.t:0 ""
 ott.144.d:0 ""
 ott.144.a:0 ""
 
-ott.145.t:0 "Renegotiating German Debt"
+ott.145.t:0 "Renegotiating German Payments"
 ott.145.d:0 "The massive OPDA payments collected by the German Empire every month are breaking our back. If we are to survive as a sovereign state, we need to take control of our own economy. At the current rate, it will take us until 1960 to pay back all our foreign debt, but our top diplomats suggest there might be another way. With the recent trouble Germany finds itself in, maybe we can reach a deal to forego the interest and pay only the principal we owe them. This one-time payment could potentially be made in form of weapons, supplies or consumer goods, all of which they badly need right about now..."
 ott.145.a:0 "Offer weapons and supplies"
 ott.145.b:0 "Offer consumer goods"
@@ -936,7 +936,7 @@ ott.153.d:0 "The Ottoman Empire has defaulted on their debts to us! The regular 
 ott.153.a:0 "Enforce an embargo!"
 ott.153.b:0 "This means WAR!"
 
-ott.154.t:0 "Renegotiating German Debt"
+ott.154.t:0 "Renegotiating Austrian Payments"
 ott.154.d:0 "The OPDA payments collected by the Austrian Empire every month are breaking our back. If we are to survive as a sovereign state, we need to take control of our own economy. At the current rate, it will take us until 1960 to pay back all our foreign debt, but our top diplomats suggest there might be another way. With the recent trouble Austria finds itself in, maybe we can reach a deal to forego the interest and pay only the principal we owe them. This one-time payment could potentially be made in form of weapons, supplies or consumer goods, all of which they badly need right about now..."
 ott.154.a:0 "Offer weapons and supplies"
 ott.154.b:0 "Offer consumer goods"
@@ -1038,7 +1038,7 @@ ott.175.t:0 "Druze revolt dispersed in Syria"
 ott.175.d:0 "A large revolt of Druze tribesmen was recently crushed by our Desert Rangers. Hundreds of rebels have been killed, while the routed tribes returned to their villages and ceased their raids on our trade routes. Evidence shows that these revolts are being provoked by Hashemite agents."
 ott.175.a:0 "Such pointless waste..."
 
-ott.176.t:0 "Egyptian Weapon shipments caught in Basra"
+ott.176.t:0 "Egyptian weapon shipments caught in Basra"
 ott.176.d:0 "Thanks to an anonymous tip, two shipping containers full of rifles were discovered in Port Basra. Originating from an Egyptian port, these containers had been brought in by a Spanish freighter. It appears that these weapons were destined for rebel groups in southern Iraq, to be used against our soldiers."
 ott.176.a:0 "We will get to the bottom of this..."
 
