Finished Irish socialist congress events

--- a/localisation/KR_Ireland_l_english.yml
+++ b/localisation/KR_Ireland_l_english.yml
@@ -199,9 +199,11 @@ ire.76.t:0 "The Union Replies"
 ire.76.d:0 "Our attempt at flirting with Union of Britain businesses has been a success. The Vauxhall automobile manufacturer has announced the construction of a new Dublin subsidiary. Whilst a Syndicalist investment will strengthen our civilian economy and provide vital jobs to our people, it is possible that it may have consequences in the long term."
 ire.76.d1:0 "Our attempt at flirting with Union of Britain businesses has sadly been a failure. The English have decided to take a more protectionist approach to their domestic industries and have forbidden any foreign investment in Dublin."
 ire.76.d2:0 "Our attempt at flirting with Union of Britain businesses has sadly been a failure. Due to the fact that they are presently at war, they feel they are unable to engage in any new foreign investments at this time."
+ire.76.d3:0 "Our attempt at flirting with Union of Britain businesses has been a success. The Vauxhall automobile manufacturer has announced the construction of a new Dublin subsidiary."
 ire.76.a:0 "The benefits outweigh the possible risks."
 ire.76.b:0 "We didn't need them anyway."
 ire.76.c:0 "On second thought, we don't need Syndicalist influence in Dublin."
+ire.76.e:0 "Fantastic!"
 
 ire.77.t:0 "Irish Flirting with French Businesses"
 ire.77.d:0 "Surprisingly enough, the Irish have sent a trade envoy to Paris, with an offer for French businesses to set up shop in Dublin in exchange for healthy government incentives. Dublin is being promoted as a centre of trade and commerce. The Irish must be desperate if they've come to us of all people with such an offer. If we allow this, we will likely profit from it, but so too will our potential enemy across the English Channel."
@@ -213,9 +215,11 @@ ire.78.t:0 "The Commune Replies"
 ire.78.d:0 "Our attempt at flirting with French Commune businesses has been a success. Lorraine-Dietrich, an automobile manufacturer, has announced the construction of a new Dublin subsidiary. Whilst a Syndicalist investment will strengthen our civilian economy and provide vital jobs to our people, it is possible that it may have consequences in the long term."
 ire.78.d1:0 "Our attempt at flirting with French Commune businesses has sadly been a failure. The French have decided to take a more protectionist approach to their domestic industries and have forbidden any foreign investment in Dublin."
 ire.78.d2:0 "Our attempt at flirting with French Commune businesses has sadly been a failure. Due to the fact that they are presently at war, they feel they are unable to engage in any new foreign investments at this time."
+ire.78.d3:0 "Our attempt at flirting with French Commune businesses has been a success. Lorraine-Dietrich, an automobile manufacturer, has announced the construction of a new Dublin subsidiary."
 ire.78.a:0 "The benefits outweigh the possible risks."
 ire.78.b:0 "We didn't need them anyway."
 ire.78.c:0 "On second thought, we don't need Syndicalist influence in Dublin."
+ire.78.e:0 "Fantastic!"
 
 ire.79.t:0 "Irish Flirting with American Businesses"
 ire.79.d:0 "We've received news today that the Irish are doing their best to promote a newly modernised Dublin as a prospective centre of trade and finance. Several of our leading industrial companies have been contacted and it has been suggested that we encourage them to set up shop in the Irish capital. We will naturally reap some of the profits of this arrangement, which could be quite profitable in the long-run. Of course, it will be even more beneficial for the Irish."
@@ -895,7 +899,7 @@ ire.218.d:0 "The French have refused our request for entry in the Internationale
 ire.218.a:0 "Their loss!"
 ire.219.t:0 "ACS Economic Policy"
 ire.219.d:0 "The first issue is the economy, Saor Éire advocate for building infastructure in Ireland's poorest areas to aid the people there, the Irish Worker League support further industrialisation of Ireland's main cities under the control of the workers, while the Revolutionary Workers Group propose public works projects to revitalise the Irish economy and bolster support for the new revolutionary government."
-ire.219.a:0 "RWG: A series of public works projects!"
+ire.219.a:0 "RWG: Public works projects!"
 ire.219.b:0 "IWL: Further industrialisation!"
 ire.219.c:0 "SÉ: We must aid our poorest regions!"
 ire.220.t:0 "ACS Language Policy"
@@ -1136,7 +1140,7 @@ ire.1.c:0 "Call up only the infantry reserves."
 
 # Introduction Events
 ire.2.t:0 "The State of the Republic, 1936"
-ire.2.d:0 "After countless years of arduous rebellion and weathering oppressive British rule, the Irish people have won their freedom, and their country back. But as one enemy was vanquished, another rose in her place, perhaps yet more dangerous still. Michael Collins sits a reluctant dictator, eager to defend the independence of his nation at any cost, yet his political enemies are many. Ireland is a powder keg, and it's only a matter of time until it explodes."
+ire.2.d:0 "After countless years of arduous rebellion and weathering oppressive British rule, the Irish people have won their freedom, and their country back. But as one enemy was vanquished, another rose in her place, perhaps yet more dangerous still. Michael Collins sits a reluctant dictator, eager to defend the independence of his nation at any cost, yet his political enemies are many as the 1937 election approaches. Ireland is a powder keg, and it's only a matter of time until it explodes."
 ire.2.a:0 "These are turbulent times."
 
 ire.53.t:0 "Problems Up North"
