--- a/localisation/KR_Partitions_l_english.yml
+++ b/localisation/KR_Partitions_l_english.yml
@@ -253,6 +253,47 @@ part.4.c:0 "Only the Scots are deserving of independence!"
 part.4.e:0 "Liberate only Scotland and Wales."
 part.4.f:0 "Total Occupation of Great Britain!"
 
+part.61.t:0 "A loyal government in London"
+part.61.d:0 "The new government of Britain is firmly under our control."
+part.61.a:0 "Pax Europa!"
+
+part.62.t:0 "Should Britain become a monarchy?"
+part.62.d:0 "As we are establishing the new government of Great Britain we have the opportunity to install a new King of Great Britain. It may, however, be wise to let the British choose their own government lest they rise against us."
+part.62.a:0 "Recreate the United Kingdom!"
+part.62.b:0 "Let Great Britain become a republic instead."
+
+part.63.t:0 "Germany has imposed a King on us"
+part.63.d:0 "We will become a monarchy again."
+part.63.a:0 "Long live Richard IV!"
+
+part.64.t:0 "Germany let us choose our new President"
+part.64.d:0 "We are a Republic once again."
+part.64.a:0 "All hail our new president!"
+
+part.65.t:0 "Scotland"
+part.65.d:0 "...Nobody sees this..."
+part.65.a:0 "Independence at Last!"
+
+part.66.t:0 "A loyal puppet in Edinburgh"
+part.66.d:0 "The new government of Scotland is under our control and the Scottish nation is now a loyal member of Mitteleuropa. May this be the beginning of a new age of peace for Europe."
+part.66.a:0 "Pax Europa!"
+
+part.67.t:0 "Wales"
+part.67.d:0 "...Nobody sees this..."
+part.67.a:0 "And its all Thanks to the friendly Germans!"
+
+part.68.t:0 "A loyal puppet in Cardiff"
+part.68.d:0 "The new government of Wales is under our control and the Welsh nation now a loyal member of Mitteleuropa. Wales is finally free from centuries of English oppression, now they're under the protection of the Kaiser!"
+part.68.a:0 "Pax Europa!"
+
+part.69.t:0 "England"
+part.69.d:0 "...Nobody sees this..."
+part.69.a:0 "Hurrah!"
+
+part.70.t:0 "A loyal puppet in London"
+part.70.d:0 "The new government of England is under our control and the English nation now a loyal member of Mitteleuropa. Finally a Hohenzollern king sits on St. Edward's Throne! England shall raise its fist against the Vaterland no more!"
+part.70.a:0 "Pax Europa!"
+
 part.5.t:0 "The Fall of Paris"
 part.5.d:0 "Paris, capital of the Commune of France and the centre of the Syndicalist Movement, has been captured. We are facing resistance from the civilian population, but we will soon take full control of the city."
 part.5.a:0 "It won't be long now!"
