--- a/localisation/KR_Canada_l_english.yml
+++ b/localisation/KR_Canada_l_english.yml
@@ -33,6 +33,8 @@ CAN_aircanada_idea:0 "Trans-Canada Airlines"
 CAN_aircanada_idea_desc:0 "Founding a national airline company capable of linking the entirery of Canada by air is no small task. But as a simple airfield is all you need to link two cities together, this allows us to bypass the need for titanic infrastructure works. The skills and techniques we learn could also apply well to general air doctrines."
 CAN_common_chassis_idea:0 "Chassis Commonality"
 CAN_common_chassis_idea_desc:0 "One of the most important parts of automotive engineering is simply trying to standardize production as much as possible. By ensuring that all our motorized, mechanized and armoured divisions share the same basic chassis, we can speed up the construction of current and new designs."
+CAN_common_components_idea:0 "Component Commonality"
+CAN_common_components_idea_desc:0 "Ever since the breakthrough of replaceable parts, all guns have been made of the same parts to allow easy replacement and building. However, we can go one step further and ensure that all designs in one category share the same parts, and even new designs try to incorporate them, massively reducing production times of weapons and artillery pieces, new and old."
 CAN_navy_school_idea:0 "Royal Roads Naval College"
 CAN_navy_school_idea_desc:0 "The Royal Roads Naval College is our brand new naval officer training school. Its construction has given us some time to rethink our officer training courses, and this will probably allow us to ensure that the next generation of admirals will be the top of the cream, enough to teach the Kriegsmarine a thing or two about modern naval warfare."
 CAN_asw_idea:0 "Anti-Submarine Pickets"
