--- a/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
+++ b/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
@@ -386,8 +386,8 @@ PLC_national_populist_party:0 "National-Radical Party"
 PLC_national_populist_party_long:0 "The National-Radical Party"
 
 ### Flags ###
-plc_polish_favor:0 "§RThis option will favor Poland in the makeup of the Commonwealth§! \n"
-plc_lithuanian_favor:0 "§RThis option will favor Lithuania in the makeup of the Commonwealth§! \n"
+plc_polish_favor:0 "§RThis option will favor Poland in the makeup of the Commonwealth.§! \n"
+plc_lithuanian_favor:0 "§RThis option will favor Lithuania in the makeup of the Commonwealth.§! \n"
 PLC_russian_forts_tooltip:0 " will gain a large fortification on the Russian border.\n"
 PLC_holding_our_gains_tooltip:0 " will gains city-wide fortifications. \n"
 PLC_coastal_forts_tooltip:0 "will recieve extensive coastal fortifications. \n"
