--- a/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -770,3 +770,28 @@ combinedsyndicates.238.a:0 "Gracias Camaradas!"
 combinedsyndicates.239.t:0 "America has given us the Canal"
 combinedsyndicates.239.d:0 "The American have given us the canal. This is a great day for people throughout central America. "
 combinedsyndicates.239.a:0 "Gracias Camaradas!"
+
+combinedsyndicates.300.t:0 "The Catholic Workers Movement"
+combinedsyndicates.300.d:0 "With the end of the Revolution a number of religious groups have popped up dealing with helping in reconstruction. Of these groups the one that has attracted the most attention and popularity is the Catholic Workers Movement. Lead by Comrade Dorothy Day, the movement has attracted popularity for combining Catholicism with radical socialist values. The movement is noticeable for their focus on Works of Mercy and their Hospitality House for all those in need."
+combinedsyndicates.300.a:0 "Live in accordance with the justice and charity of Jesus Christ"
+combinedsyndicates.301.t:0 "The Catholic Workers Movement"
+combinedsyndicates.301.d:0 "The civil war in America is over and news has reached the Vatican about the rise of the Catholic Workers Movement. The movement is emphatically catholic but it is also emphatically an anarchist movement. The growth of the Catholic Workers Movement is concerning to the Vatican leadership who view it as a deviating it from Catholic Doctrine. However despite this, most think that the best way to handle it is to ignore it as most pious Catholics will stay true to the Church's teachings. While others think that an Encyclical against the movement would destroy it in the crib. While finally a small few think supporting the movement can allow the Catholic Church to turn it away from Syndicalism and as a force for good. "
+combinedsyndicates.301.a:0 "Ignore the Movement"
+combinedsyndicates.301.b:0 "Support the Movement"
+combinedsyndicates.301.c:0 "Denounce the Movement"
+combinedsyndicates.302.t:0 "The Catholic Church ignores the CWM"
+combinedsyndicates.302.d:0 "News has come that the Vatican has decided to ignore the Catholic Workers Movement. This is an unsurprising development and little changes for the movement which has slowly grown and continues to help Americans throughout the country."
+combinedsyndicates.302.a:0 "Good enough."
+combinedsyndicates.303.t:0 "The Catholic Church supports the CWM"
+combinedsyndicates.303.d:0 "In a shocking move the pope has announced its support for the Catholic Workers Movement. This news comes as a great shock to many, most of all Dorothy Day herself. The movement has gathered more attention and support among our catholic comrades throughout the country. "
+combinedsyndicates.303.a:0 "God Bless you Comrade Day!"
+combinedsyndicates.304.t:0 "The Catholic Church denounces the CWM"
+combinedsyndicates.304.d:0 "Unsurprisingly the Pope has come out against the Catholic Workers Movement. Our Catholic Comrades our distraught, including Comrade Dorothy Day. In response of the Encyclical against the Catholic Workers Movement have decided to separate from the Catholic church and go their own way as independent catholics. "
+combinedsyndicates.304.a:0 "The Pope stands in the way of true piety!"
+
+combinedsyndicates.305.t:0 "Primer of God Save the Kaiser"
+combinedsyndicates.305.d:0 "With Reconstruction on the way Charlie Chaplin and the United Artist Union have released yet another hit. His new movie, God Save the Kaiser, is considered by man to be his best movie to date. God Save the Kaiser is a political satirical comedy-drama and Chaplin's first true sound films. The film follows two principal characters, an unnamed German barber struggling to make ends meet in Germany who bears a great deal of similarity with the Tramp that Chaplin played in his other movies. The other major character is Kaiser Fredrick who is a bumbling but cruel buffoon of a leader; an obvious satire of Kaiser Wilhelm the 2nd. Throughout the film it shows the plight of the average German worker while viciously mocking the German government and the kaiser in particular. The Film ends with the barber being mistaken for Kaiser and giving a rousing speech where he extolls the virtues of Good will and Human Brotherhood and gives a strong endorsement for Chaplin's Radical Socialist views."
+combinedsyndicates.305.a:0 "Chaplin has out done himself"
+combinedsyndicates.306.t:0 "Woody Guthrie's Musical Tour"
+combinedsyndicates.306.d:0 "With Reconstruction on the way famed musician Woody Guthrie and his band the Almanac Singers has gone on a musical tour. Popular with many throughout the country, Guthrie and his band play old classics such as Solidarity Forever and There is Power in a Union but they also have written many new songs, such as This Land is your Land, Ease My Revolutionary Mind, Tear the Capitalists down, and All you Capitalists are bound to loose. The tour has proven to be widely popular in all the venues that he and his band play at. "
+combinedsyndicates.306.a:0 "Will there be another Tour?"
